fixed text alignment

--- a/src/components/FitnessPlan/FitnessPlan.module.scss
+++ b/src/components/FitnessPlan/FitnessPlan.module.scss
@@ -9,6 +9,9 @@
   font-size: 14px;
   display: flex;
   flex-direction: row;
+  align-items: flex-start;
+  gap: 5px;
+  line-height: 1;
 }
 
 .icon {
