--- a/src/components/PlanContainer/PlanContainer.module.scss
+++ b/src/components/PlanContainer/PlanContainer.module.scss
@@ -1,7 +1,8 @@
 .main {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 50px;
   width: 100vw;
   padding: 0px 50px;
 }
